# haskell-numbers

./: .cursorrules  .devenv.flake.nix  .gitignore  README.md  devenv.nix  flake.nix  session.yaml
doc/: .devenv.flake.nix  .gitignore  00-main.tex  default.nix  devenv.nix  flake.nix  number-types.csv  preamble.tex
doc/src/: 00-main.tex  ClassesAndTypes.ods  preamble.tex
katas/: .gitignore
katas/renameme/: NumInstance.hs  Square.hs  renameme.cabal  styles.css
katas/renameme/app/: Main.hs
katas/renameme/src/: Params.hs
renameme/: Site.hs  well-typed-transcript.md
renameme/templates/: default.html
